k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chargate
  labels:
    app: chargate
spec:
  type: ClusterIP
  selector:
    app: chargate
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
